@@ -1,46 +1,40 @@
+plugins {
+    id "application"
+    id "org.openjfx.javafxplugin" version "0.0.8"
+    id "org.springframework.boot" version "2.3.3.RELEASE"
+    id "io.spring.dependency-management" version "1.0.10.RELEASE"
+}
+
 group "com.github.adamyork"
-version "0.1"
+version "1.0"
 project.ext.set("buildDate", getDate())
 
 static def getDate() {
     new Date().format('yyyy-MM-dd')
 }
 
-buildscript {
-    dependencies {
-        classpath group: "de.dynamicfiles.projects.gradle.plugins", name: "javafx-gradle-plugin", version: "8.8.2"
-        classpath group: "org.springframework.boot", name: "spring-boot-gradle-plugin", version: "1.5.1.RELEASE"
-    }
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven {
-            url "https://maven.eveoh.nl/content/repositories/releases"
-        }
-    }
-}
-
-apply plugin: "java"
-apply plugin: "javafx-gradle-plugin"
-apply plugin: "org.springframework.boot"
-
 repositories {
-    jcenter()
     mavenCentral()
+    jcenter()
 }
+
+//jdeps -R --multi-release 14 --ignore-missing-deps --class-path "build\libs\BOOT-INF\lib" --print-module-deps build\classes\java\main\com\github\adamyork\fx5p1d3r\Main.class > temp.txt
+//jdeps -R build\libs\5p1d3r-1.0.jar > temp.txt
+//jpackage --type exe --dest build/installer --input build/libs --name 5p1d3r --main-class org.springframework.boot.loader.JarLauncher --main-jar 5p1d3r-1.0.jar --java-options -Xmx2048m --runtime-image build/java-runtime --app-version 1.0 --win-dir-chooser
+//jlink --no-header-files --no-man-pages --compress=2 --strip-debug --add-modules "java.base,java.desktop,java.logging" --output build/java-runtime
 
 dependencies {
-    compile group: "org.springframework.boot", name: "spring-boot-starter"
-    compile group: "org.jsoup", name: "jsoup", version: "1.7.2"
-    compile group: "commons-validator", name: "commons-validator", version: "1.4.0"
-    compile group: "commons-io", name: "commons-io", version: "2.4"
-    compile group: "org.codehaus.groovy", name: "groovy-all", version: "2.4.7"
-    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.8.7"
-    compile group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-csv", version: "2.8.7"
-    compile group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
-    compile group: "org.controlsfx", name: "controlsfx", version: "8.40.13"
-    compile group: "org.jooq", name: "jool", version: "0.9.12"
-    compile group: 'javax.inject', name: 'javax.inject', version: '1'
+    compile group: "org.springframework.boot", name: "spring-boot-starter", version: "2.3.3.RELEASE"
+    compile group: "org.jsoup", name: "jsoup", version: "1.13.1"
+    compile group: "commons-validator", name: "commons-validator", version: "1.7"
+    compile group: "commons-io", name: "commons-io", version: "2.7"
+    compile group: "org.codehaus.groovy", name: "groovy-all", version: "3.0.5"
+    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.11.2"
+    compile group: "com.fasterxml.jackson.dataformat", name: "jackson-dataformat-csv", version: "2.11.2"
+    compile group: "commons-configuration", name: "commons-configuration", version: "1.10"
+    compile group: "org.controlsfx", name: "controlsfx", version: "11.0.2"
+    compile group: "org.jooq", name: "jool", version: "0.9.14"
+    compile group: "javax.inject", name: "javax.inject", version: "1"
     testCompile group: "junit", name: "junit", version: "4.11"
 }
 
@@ -50,17 +44,16 @@ processResources {
     }
 }
 
-jfx {
-    mainClass = "com.github.adamyork.fx5p1d3r.Main"
-    vendor = "Adam York"
+compileJava.dependsOn(processResources)
+
+javafx {
+    mainClassName = "com.github.adamyork.fx5p1d3r.Main"
+    version = "14"
+    modules = ["javafx.controls", "javafx.fxml"]
     //jvmArgs = ["-agentlib:jdwp=transport=dt_socket,address=8004,server=y,suspend=y"]
 }
 
-sourceSets {
-    main {
-        resources {
-            srcDirs = ["src/main/java", "src/main/resources"]
-            includes = ["**/*.fxml", "**/*.css", "**/*.png", "**/*.groovy", "*.properties"]
-        }
-    }
+task buildWindowsInstaller(type: Exec) {
+    workingDir "${projectDir}"
+    commandLine "jpackage", "--type", "exe", "--dest", "${projectDir}\\build\\installer", "--input", "${projectDir}\\build\\libs", "--name", "5p1d3r", "--main-class", "org.springframework.boot.loader.JarLauncher", "--main-jar", "5p1d3r-1.0.jar", "--java-options", "-Xmx2048m", "--app-version", "${version}", "--win-dir-chooser"
 }
